syntax = "proto3";

package messageexchange;

option java_multiple_files = true;
option java_package = "com.shiroha.grpc";
option java_outer_classname = "MessageExchangeProto";

service MessageExchange {
  rpc SendMessage (MessageRequest) returns (MessageResponse) {}
}

message MessageRequest {
  bytes binary_image = 1;
  int32 width = 2;
  int32 height = 3;
}

message MessageResponse {
  string result = 1;
  bool isEmpty = 2;
}